--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -62,7 +62,7 @@ AFG_national_populist:0 "Islamic State of Afghanistan"
 AFG_national_populist_ADJ:0 "Afghan"
 AFG_national_populist_DEF:0 "The Emirate of Afghanistan"
 
-AHE_totalist:0 "Austro-Hungarian Empire"
+AHE_totalist:0 "오스트리아-헝가리 제국"
 AHE_totalist_ADJ:0 "Austro-Hungarian"
 AHE_totalist_DEF:0 "The Austro-Hungarian Empire"
 AHE_syndicalist:0 "Austro-Hungarian Empire"
