번역 테스트
깃허브 번역 테스트

--- a/Kaiserreich Korean Translation/localisation/KR_Alash_Autonomy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Alash_Autonomy_l_english.yml
@@ -22,7 +22,7 @@ ALO_TRK_defend:0 "Pledge to Defend Orda's Muslims"
 ALO_TRK_do_nothing:0 "Turkestan Maintain the Status Quo"
 ALO_RUS_encourage:0 "Encouraged Seceding"
 ALO_RUS_pledge:0 "Russia Pledge to defend the Russian Communities"
-ALO_RUS_war:0 "Russia Declared War on Us"
+ALO_RUS_war:0 "러시아가 우리에게 전쟁을 선포했습니다"
 ALO_RUS_nothing:0 "Russia Maintain the Status Quo"
 ALO_do_nothing_RUS:0 "Alash Cedes"
 ALO_RUS_alliance:0 "Alliance with Russia"
