--- a/Kaiserreich Korean Translation/localisation/KR_Commune_of_France_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Commune_of_France_l_english.yml
@@ -2,51 +2,51 @@
 
 ### Opinion Modifiers ###
 
-FRA_internationalism:0 "Internationalism Proponent"
-FRA_internationalism2:0 "Internationalism Proponent"
-FRA_world_revolution_op:0 "World Revolution Proponent"
-FRA_world_revolution2_op:0 "World Revolution Proponent"
-FRA_revenge_germany:0 "Focus on Revenge Against Germany"
-FRA_european_socialism:0 "European Socialism Proponent"
-FRA_european_socialism2:0 "European Socialism Proponent"
-FRA_choose_tasca:0 "France Chose Tasca as their Foreign Staff Head"
-FRA_first_inter1:0 "The First Congress of the Internationale"
-FRA_first_inter2:0 "The First Congress of the Internationale"
-FRA_first_inter3:0 "The First Congress of the Internationale"
-FRA_first_inter4:0 "The First Congress of the Internationale"
-FRA_cancel_first_inter1:0 "Cancelled the First Congress of the Internationale"
-FRA_cancel_first_inter2:0 "Cancelled the First Congress of the Internationale"
-FRA_cancel_first_inter3:0 "Cancelled the First Congress of the Internationale"
-FRA_cancel_first_inter4:0 "Cancelled the First Congress of the Internationale"
-FRA_not_going_first_inter:0 "Not Going to the Internationale Congress"
-FRA_overthrow_bourgeoisie:0 "Called to World Revolution"
-FRA_help_cnt:0 "Support the CNT"
-FRA_support_csa:0 "Support the CSA"
-FRA_support_sri:0 "Support the Socialist Republic of Italy"
-FRA_support_sri2:0 "Support the Socialist Republic of Italy"
-FRA_not_support_sri:0 "Didn't Support the Socialist Republic of Italy"
+FRA_internationalism:0 "국제사회주의 지지"
+FRA_internationalism2:0 "국제사회주의 지지"
+FRA_world_revolution_op:0 "세계혁명 지지"
+FRA_world_revolution2_op:0 "세계혁명 지지"
+FRA_revenge_germany:0 "독일에 대한 복수"
+FRA_european_socialism:0 "유럽 사회주의 지지"
+FRA_european_socialism2:0 "유럽 사회주의 지지"
+FRA_choose_tasca:0 "프랑스는 그들의 외교 대표로써 Tasca를 선택했다."
+FRA_first_inter1:0 "첫번째 인터네셔널 회의"
+FRA_first_inter2:0 "첫번째 인터네셔널 회의"
+FRA_first_inter3:0 "첫번째 인터네셔널 회의"
+FRA_first_inter4:0 "첫번째 인터네셔널 회의"
+FRA_cancel_first_inter1:0 "첫번째 인터네셔널 회의가 취소되다"
+FRA_cancel_first_inter2:0 "첫번째 인터네셔널 회의가 취소되다"
+FRA_cancel_first_inter3:0 "첫번째 인터네셔널 회의가 취소되다"
+FRA_cancel_first_inter4:0 "첫번째 인터네셔널 회의가 취소되다"
+FRA_not_going_first_inter:0 "인터네셔널 회의에 가지 않는다."
+FRA_overthrow_bourgeoisie:0 "취소된 세계 혁명"
+FRA_help_cnt:0 "CNT를 지원한다."
+FRA_support_csa:0 "CSA를 지원한다"
+FRA_support_sri:0 "이탈리아 사회주의 공화국을 지원한다."
+FRA_support_sri2:0 "이탈리아 사회주의 공화국을 지원한다."
+FRA_not_support_sri:0 "이탈리아 사회주의 공화국을 지원하지 않는다."
 FRA_mission_bharitya:0 "Internationale Mission to the Commune"
-FRA_decline_mission_bharitya:0 "Refused to Help the Bharatiya Commune"
-FRA_support_social_muslim:0 "Support the Socialist Muslim Committee"
-FRA_not_support_social_muslim:0 "Didn't Support the Socialist Muslim Committee"
-ENG_cancel_second_inter:0 "Cancelled the Second Internationale"
-ENG_going_second_congress:0 "Going to the Second Congress of the Internationale"
-ENG_not_going_second_congress:0 "Not Going to the Second Internationale Congress"
-ENG_gg_comrade_blair:0 "Comrade Blair's Inauguration"
-hemingway_speech:0 "Hemingway's Speech"
-FRA_agreed_help_south_america:0 "Agreed to Help South America"
-FRA_refused_help_south_america:0 "Refused to Help South America"
-BRA_leave_congress:0 "Left the Second Congress of the Internationale"
-end_second_congress:0 "End of the Second Congress of the Internationale"
-GUA_ambitions:0 "Centroamérican Ambitions"
-BRA_BOL_alliance_second_congress:0 "Brazilian-Bolivian Alliance"
-BRA_BOL_not_alliance_second_congress:0 "Refused an Alliance"
-GER_approach_neighbours:0 "Promised to Protect Us"
-GER_RUS_reinsurance_treaty:0 "Reinsurance Treaty"
-GER_RUS_refuse_reinsurance_treaty:0 "Refused the Reinsurance Treaty"
-GER_arrest_left_activists:0 "Germany Arrested Several Left-Wing Activists"
-FRA_aided_phalanstere:0 "Helped our Development"
-FRA_1941_election:0 "The Internationale's Strength"
+FRA_decline_mission_bharitya:0 "R바라티야 코뮌을 지원하는 것을 거부한다."
+FRA_support_social_muslim:0 "사회주의자 무슬림 공동체를 지원한다"
+FRA_not_support_social_muslim:0 "사회주의자 무슬림 공동체를 지원하지 않는다"
+ENG_cancel_second_inter:0 "두번째 인터네셔널 회의가 취소되다"
+ENG_going_second_congress:0 "두번째 인터네셔널 회의에 간다."
+ENG_not_going_second_congress:0 "두번째 인터네셔널 회의에 가지 않는다."
+ENG_gg_comrade_blair:0 "블레어 동무의 개막사"
+hemingway_speech:0 "허밍웨이의 연설"
+FRA_agreed_help_south_america:0 "남 아메리카를 지원하는 것을 동의한다."
+FRA_refused_help_south_america:0 "남 아메리카를 지원하는 것을 거부한다."
+BRA_leave_congress:0 "두번째 인터네셔널 회의를 떠나다"
+end_second_congress:0 "두번째 인터네셔널 회의가 종료되다"
+GUA_ambitions:0 "중앙 아메리칸인의 야망"
+BRA_BOL_alliance_second_congress:0 "브라질-볼라비아 동맹"
+BRA_BOL_not_alliance_second_congress:0 "동맹을 거부하다"
+GER_approach_neighbours:0 "우리를 보호 할 것을 약속하다"
+GER_RUS_reinsurance_treaty:0 "재보장 조약"
+GER_RUS_refuse_reinsurance_treaty:0 "재보장 조약을 거부하다."
+GER_arrest_left_activists:0 "독일인들이 일부 좌파 인사들을 체포하다."
+FRA_aided_phalanstere:0 "우리들의 발전을 도와주다."
+FRA_1941_election:0 "인터네셔널의 힘"
 
 ### Ideas ###
 
