--- a/Kaiserreich Korean Translation/localisation/KR_Black_monday_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Black_monday_l_english.yml
@@ -1,70 +1,70 @@
 ﻿l_english:
 
 ### Black Monday General Events ###
-black.1.t:0 "This is not meant to be here!"
-black.1.d:0 "If you see this please report on the paradox forums!"
-black.1.a:0 "I'm serious REPORT IT!"
-black.2.t:0 "Black Monday"
-black.2.d:0 "On the third of February 1936, the Berlin Stock Exchange stopped sinking - it plunged. Fuelled by the instability of the market panic, selling erupted as soon as the stock market opened on Monday morning. \n\nIt took well into the night for the teleprinters to stop sputtering out the results of what became known as Black Monday. When the results had been analysed, it was clear that the situation had only got worse.\n\nThe shock of this unprecedented economic catastrophe will, no doubt, be felt over the entire world. The German golden age has ended - for now, at least..."
-black.2.a:0 "Mein Gott!"
-black.3.t:0 "Black Monday"
+black.1.t:0 "이 문장은 여기 있으면 안돼!"
+black.1.d:0 "혹시라도 본 사람은 포럼에 보고해주길!"
+black.1.a:0 "진지하게 부탁하는 거야!"
+black.2.t:0 "검은 월요일"
+black.2.d:0 "1936년 2월의 셋째 주가 시작되던 날, 베를린 증권 거래소의 시세 하강곡선은 멈추었다. 붕괴. 시장에 가해진 충격으로 촉발된 불안정성을 먹이삼아, 월요일 아침 증시가 열리자마자 분출적인 매각이 시작됐다. \n\nIt took well into the night for the teleprinters to stop sputtering out the results of what became known as Black Monday. When the results had been analysed, it was clear that the situation had only got worse.\n\nThe shock of this unprecedented economic catastrophe will, no doubt, be felt over the entire world. The German golden age has ended - for now, at least..."
+black.2.a:0 "이런 세상에!"
+black.3.t:0 "검은 월요일"
 black.3.d:0 "On the third of February 1936, the Berlin Stock Exchange stopped sinking - it plunged. Fuelled by the instability of the market panic, selling erupted as soon as the stock market opened on Monday morning. \n\nIt took well into the night for the teleprinters to stop sputtering out the results of what became known as Black Monday. When the results had been analysed, it was clear that the situation had only got worse.\n\nThe shock of this unprecedented economic catastrophe will, no doubt, be felt over the entire world. The German golden age has ended - for now, at least..."
-black.3.a:0 "Mein Gott!"
-black.4.t:0 "Run on the banks"
-black.4.d:0 "German citizens, panicked by the collapse of the Berlin Stock Market, are rushing to make bank runs to withdraw their assets. The banks cannot afford to give out such sums and many are in danger of collapse. Many are clamouring for immediate government intervention to stabilise this unprecedented financial crisis!"
-black.4.a:0 "Close the banks temporarily."
-black.4.b:0 "Guarantee the holdings of private individuals."
-black.4.c:0 "Do nothing."
-black.5.t:0 "Black Week comes to an end"
+black.3.a:0 "이런 세상에!"
+black.4.t:0 "대량 인출 사태"
+black.4.d:0 "베를린 증시의 붕괴에 놀란 독일 시민들이 자산을 인출하기 위해 은행으로 쇄도하고 있다. 은행은 이 상황을 감당할 수 없으며 끝내 파산할 것이다. 이 경제 위기를 안착시키기 위한 정부의 즉각적인 개입을 요구하는 목소리가 높아지고 있다!"
+black.4.a:0 "임시적으로 은행의 문을 닫자."
+black.4.b:0 "사유재산의 보호는 보장되어야지."
+black.4.c:0 "가만히 있자."
+black.5.t:0 "암울한 한 주가 지나갔다"
 black.5.d:0 "The situation hardly improved in the days following Black Monday, which was the start of what became known as Black Week. Panic-selling of stocks reached an all-time high as people tried to dump their stocks before they became worthless. When the Berlin Stock Market closed at the end of the week, the market was as dead as the 11 major economic experts and top executives in Germany had committed suicide. The German government had to act."
-black.5.a:0 "We must reform the economy."
-black.6.t:0 "Six months after Black Monday"
+black.5.a:0 "경제 개혁을 해야만 한다."
+black.6.t:0 "검은 월요일 이후 6개월"
 black.6.d:0 "Six months have passed since Black Monday and the subsequent Black Week. One of the worst problems Germany had to face since then was a rising unemployment rate."
-black.6.a:0 "Unemployment is very high"
-black.7.t:0 "Six months after Black Monday"
+black.6.a:0 "실업률이 너무나 높다"
+black.7.t:0 "검은 월요일 이후 6개월"
 black.7.d:0 "Six months have passed since Black Monday and the subsequent Black Week. One of the worst problems Germany had to face since then was a rising unemployment rate."
-black.7.a:0 "Unemployment is high"
-black.8.t:0 "Six months after Black Monday"
+black.7.a:0 "실업률이 너무나 높다"
+black.8.t:0 "검은 월요일 이후 6개월"
 black.8.d:0 "Six months have passed since Black Monday and the subsequent Black Week. One of the worst problems Germany had to face since then was a rising unemployment rate."
 black.8.a:0 "Unemployment rose only a little"
-black.9.t:0 "One year after Black Monday"
+black.9.t:0 "검은 월요일 이후 1년"
 black.9.d:0 "One year has passed since Black Monday and the subsequent Black Week. The state of our industry is still recovering from the blow."
-black.9.a:0 "The economy is even worse now!"
-black.10.t:0 "One year after Black Monday"
+black.9.a:0 "경제는 더욱 나빠졌다!"
+black.10.t:0 "검은 월요일 이후 1년"
 black.10.d:0 "One year has passed since the Black Monday and the subsequent Black Week. The state of our industry is still recovering from the blow."
-black.10.a:0 "The economy has not recovered yet…"
-black.11.t:0 "One year after Black Monday"
+black.10.a:0 "경제는 아직 회복되지 않았다…"
+black.11.t:0 "검은 월요일 이후 1년"
 black.11.d:0 "One year has passed since Black Monday and the subsequent Black Week. The state of our industry is still recovering from the blow."
-black.11.a:0 "The economy recovered a little."
-black.12.t:0 "Two years after Black Monday"
+black.11.a:0 "경제가 조금이나마 나아졌다."
+black.12.t:0 "검은 월요일 이후 2년"
 black.12.d:0 "Two years have passed since Black Monday and the subsequent Black Week. Our economy is more stable and the unemployment rate is declining every day."
-black.12.a:0 "The economy finally recovered!"
-black.13.t:0 "Two years after Black Monday"
+black.12.a:0 "마침내 경제를 완전히 회복했다!"
+black.13.t:0 "검은 월요일 이후 2년"
 black.13.d:0 "Two years have passed since Black Monday and the subsequent Black Week. Our economy is more stable and the unemployment rate is declining every day."
-black.13.a:0 "The economy is still in bad shape…"
-black.20.t:0 "War Stimulates the Economy"
+black.13.a:0 "경제의 동향은 여전히 좋지 않다…"
+black.20.t:0 "전쟁 특수"
 black.20.d:0 "Due to the war, industrial production across several sectors has skyrocketed and the workforce has endeavoured to fulfil their patriotic duty. This has had a net positive effect on the economy by reducing the aftermath of the Black Monday crash. It seems the economy is finally showing signs of life!"
-black.20.a:0 "Excellent."
-black.21.t:0 "Financial Troubles in the Colonies"
+black.20.a:0 "훌륭해."
+black.21.t:0 "식민지의 경제난"
 black.21.d:0 "Rising inflation and a consequently debased Reichsmark means that state expenses on German colonies had become too great to maintain pre-Black Monday tax codes. Some maverick politicians propose raising taxes, but raising taxes – on German nationals just to aid German colonials – would obviously not be popular, especially not under the present economic situation. Most of the Reichstag merely proposes limited financial support for our colonial possessions. What shall we do?"
-black.21.a:0 "Raise taxes to appease the needs of the colonies."
+black.21.a:0 "필요에 따라 식민지의 세금을 올리도록."
 black.21.b:0 "Spare expenses only for the colonies under our direct control."
-black.21.c:0 "Tighten our belts. They'll have to find other sources of income."
-black.22.t:0 "Major Bank Declares Bankruptcy"
+black.21.c:0 "허리띠를 졸라메자. 또 다른 수익을 찾아낼 수 있을 것이다."
+black.22.t:0 "대형 은행의 파산 선언"
 black.22.d:0 "Today, because of the state of our economy a major bank has unfortunately declared bankruptcy today. Should we help the account holders or avoid any intervention?"
-black.22.a:0 "Do nothing."
-black.22.b:0 "Help our citizens!"
-black.23.t:0 "Major Industrial Corporation Declares Bankruptcy"
+black.22.a:0 "가만히 있자."
+black.22.b:0 "우리 시민들을 도와라!"
+black.23.t:0 "공업계 대기업의 파산 선언"
 black.23.d:0 "Today, because of the state of our economy a major industrial corporation has unfortunately declared bankruptcy today. Several factories are going to close all over the country."
-black.23.a:0 "This is not good"
-black.50.t:0 "The Kaiserreich Economic Policy"
+black.23.a:0 "이거 좋지 않군"
+black.50.t:0 "제국 경제 정책"
 black.50.d:0 "Finally, three years after Black Monday, our economy is slowly recovering! This can be the time to invest more to further secure our national interests!"
-black.50.a:0 "Invest in our Heimat!"
-black.50.b:0 "Invest in our colonies!"
-black.50.c:0 "Invest in our sphere of influence!"
-black.50.e:0 "Announce a new economic cooperation plan with our neighbours!"
+black.50.a:0 "본국에 투자하라!"
+black.50.b:0 "식민지에 투자하라!"
+black.50.c:0 "영향권 내 국가들에 투자하라!"
+black.50.e:0 "이웃나라들에게 새 경제 협력 정책을 알려라!"
 
 ### Austria and Black Monday ###
-black.200.t:0 "Black Monday hits Austria"
+black.200.t:0 "오스트리아를 강타한 검은 월요일"
 black.200.d:0 "Black Monday has hit Germany and it would not be long before its shock-wave rippled across Europe. Given it's close proximity, Austria was among the first to affected. The economy is struggling and troubling times lie ahead."
-black.200.a:0 "Ach, Gott!"
+black.200.a:0 "아, 맙소사!"
