--- a/Kaiserreich Korean Translation/localisation/KR_Black_monday_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Black_monday_l_english.yml
@@ -1,70 +1,70 @@
 ﻿l_english:
 
 ### Black Monday General Events ###
-black.1.t:0 "이 문장은 여기 있으면 안돼!"
-black.1.d:0 "혹시라도 본 사람은 포럼에 보고해주길!"
-black.1.a:0 "진지하게 부탁하는 거야!"
+black.1.t:0 "This is not meant to be here!"
+black.1.d:0 "If you see this please report on the paradox forums!"
+black.1.a:0 "I'm serious REPORT IT!"
 black.2.t:0 "검은 월요일"
-black.2.d:0 "1936년 2월의 셋째 주가 시작되던 날, 베를린 증권 거래소의 시세 하강곡선은 멈추었다. 붕괴. 시장에 가해진 충격으로 촉발된 불안정성을 먹이삼아, 월요일 아침 증시가 열리자마자 분출적인 매각이 시작됐다. \n\nIt took well into the night for the teleprinters to stop sputtering out the results of what became known as Black Monday. When the results had been analysed, it was clear that the situation had only got worse.\n\nThe shock of this unprecedented economic catastrophe will, no doubt, be felt over the entire world. The German golden age has ended - for now, at least..."
-black.2.a:0 "이런 세상에!"
+black.2.d:0 "1936 년 2 월 3 일, 베를린 증권 거래소는 하락세를 멈췄습니다. - 그리고 침몰했습니다. 시장 공포의 불안정으로 인해 주식 시장이 월요일 아침에 개장하자마자 파산했습니다. \n\n 인쇄전신기는 검은 월요일의 결과를 밤새도록 출력해냈습니다. 결과가 분석되었을 때 상황이 더욱 악화되었다는 것이 분명했습니다. \n\n이 전례없는 경제적 재앙의 충격은 전 세계에서 느껴질 것입니다. 독일 황금기가 끝났습니다. 적어도 지금은 .."
+black.2.a:0 "하느님 맙소사."
 black.3.t:0 "검은 월요일"
-black.3.d:0 "On the third of February 1936, the Berlin Stock Exchange stopped sinking - it plunged. Fuelled by the instability of the market panic, selling erupted as soon as the stock market opened on Monday morning. \n\nIt took well into the night for the teleprinters to stop sputtering out the results of what became known as Black Monday. When the results had been analysed, it was clear that the situation had only got worse.\n\nThe shock of this unprecedented economic catastrophe will, no doubt, be felt over the entire world. The German golden age has ended - for now, at least..."
-black.3.a:0 "이런 세상에!"
-black.4.t:0 "대량 인출 사태"
-black.4.d:0 "베를린 증시의 붕괴에 놀란 독일 시민들이 자산을 인출하기 위해 은행으로 쇄도하고 있다. 은행은 이 상황을 감당할 수 없으며 끝내 파산할 것이다. 이 경제 위기를 안착시키기 위한 정부의 즉각적인 개입을 요구하는 목소리가 높아지고 있다!"
-black.4.a:0 "임시적으로 은행의 문을 닫자."
-black.4.b:0 "사유재산의 보호는 보장되어야지."
-black.4.c:0 "가만히 있자."
-black.5.t:0 "암울한 한 주가 지나갔다"
-black.5.d:0 "The situation hardly improved in the days following Black Monday, which was the start of what became known as Black Week. Panic-selling of stocks reached an all-time high as people tried to dump their stocks before they became worthless. When the Berlin Stock Market closed at the end of the week, the market was as dead as the 11 major economic experts and top executives in Germany had committed suicide. The German government had to act."
-black.5.a:0 "경제 개혁을 해야만 한다."
-black.6.t:0 "검은 월요일 이후 6개월"
-black.6.d:0 "Six months have passed since Black Monday and the subsequent Black Week. One of the worst problems Germany had to face since then was a rising unemployment rate."
-black.6.a:0 "실업률이 너무나 높다"
-black.7.t:0 "검은 월요일 이후 6개월"
-black.7.d:0 "Six months have passed since Black Monday and the subsequent Black Week. One of the worst problems Germany had to face since then was a rising unemployment rate."
-black.7.a:0 "실업률이 너무나 높다"
-black.8.t:0 "검은 월요일 이후 6개월"
-black.8.d:0 "Six months have passed since Black Monday and the subsequent Black Week. One of the worst problems Germany had to face since then was a rising unemployment rate."
-black.8.a:0 "Unemployment rose only a little"
-black.9.t:0 "검은 월요일 이후 1년"
-black.9.d:0 "One year has passed since Black Monday and the subsequent Black Week. The state of our industry is still recovering from the blow."
-black.9.a:0 "경제는 더욱 나빠졌다!"
-black.10.t:0 "검은 월요일 이후 1년"
-black.10.d:0 "One year has passed since the Black Monday and the subsequent Black Week. The state of our industry is still recovering from the blow."
-black.10.a:0 "경제는 아직 회복되지 않았다…"
-black.11.t:0 "검은 월요일 이후 1년"
-black.11.d:0 "One year has passed since Black Monday and the subsequent Black Week. The state of our industry is still recovering from the blow."
-black.11.a:0 "경제가 조금이나마 나아졌다."
-black.12.t:0 "검은 월요일 이후 2년"
-black.12.d:0 "Two years have passed since Black Monday and the subsequent Black Week. Our economy is more stable and the unemployment rate is declining every day."
-black.12.a:0 "마침내 경제를 완전히 회복했다!"
-black.13.t:0 "검은 월요일 이후 2년"
-black.13.d:0 "Two years have passed since Black Monday and the subsequent Black Week. Our economy is more stable and the unemployment rate is declining every day."
-black.13.a:0 "경제의 동향은 여전히 좋지 않다…"
-black.20.t:0 "전쟁 특수"
-black.20.d:0 "Due to the war, industrial production across several sectors has skyrocketed and the workforce has endeavoured to fulfil their patriotic duty. This has had a net positive effect on the economy by reducing the aftermath of the Black Monday crash. It seems the economy is finally showing signs of life!"
-black.20.a:0 "훌륭해."
-black.21.t:0 "식민지의 경제난"
-black.21.d:0 "Rising inflation and a consequently debased Reichsmark means that state expenses on German colonies had become too great to maintain pre-Black Monday tax codes. Some maverick politicians propose raising taxes, but raising taxes – on German nationals just to aid German colonials – would obviously not be popular, especially not under the present economic situation. Most of the Reichstag merely proposes limited financial support for our colonial possessions. What shall we do?"
-black.21.a:0 "필요에 따라 식민지의 세금을 올리도록."
-black.21.b:0 "Spare expenses only for the colonies under our direct control."
-black.21.c:0 "허리띠를 졸라메자. 또 다른 수익을 찾아낼 수 있을 것이다."
-black.22.t:0 "대형 은행의 파산 선언"
-black.22.d:0 "Today, because of the state of our economy a major bank has unfortunately declared bankruptcy today. Should we help the account holders or avoid any intervention?"
-black.22.a:0 "가만히 있자."
-black.22.b:0 "우리 시민들을 도와라!"
-black.23.t:0 "공업계 대기업의 파산 선언"
-black.23.d:0 "Today, because of the state of our economy a major industrial corporation has unfortunately declared bankruptcy today. Several factories are going to close all over the country."
-black.23.a:0 "이거 좋지 않군"
+black.3.d:0 "1936 년 2 월 3 일, 베를린 증권 거래소는 하락세를 멈췄습니다. - 그리고 침몰했습니다. 시장 공포의 불안정으로 인해 주식 시장이 월요일 아침에 개장하자마자 파산했습니다. \n\n 인쇄전신기는 검은 월요일의 결과를 밤새도록 출력해냈습니다. 결과가 분석되었을 때 상황이 더욱 악화되었다는 것이 분명했습니다. \n\n이 전례없는 경제적 재앙의 충격은 전 세계에서 느껴질 것입니다. 독일 황금기가 끝났습니다. 적어도 지금은 .."
+black.3.a:0 "하느님 맙소사."
+black.4.t:0 "뱅크런"
+black.4.d:0 "베를린 주식 시장의 붕괴로 당황한 독일 시민들은 자산을 출금시키기 위해 은행에 달려들고 있습니다. 은행은 그러한 액수를 내줄 여유가 없으며 많은 은행들이 붕괴 될 위험에 처해 있습니다. 이 전례없는 금융 위기를 안정시키기 위해 즉각적인 정부 개입을 요구하는 사람들이 많습니다."
+black.4.a:0 "일시적으로 은행을 닫아라."
+black.4.b:0 "개인의 재산을 보장하라."
+black.4.c:0 "아무것도하지 말아라."
+black.5.t:0 "검은 일주일(Black week)이 끝나다."
+black.5.d:0 "검은 일주일이라고 알려진 기간의 시작이었던 검은 월요일 다음 날에는 상황이 거의 개선되지 않았습니다. 사람들이 주식이 쓸모 없게되기 전에 급매하려고하자 주식의 폭락이 사상 최고치에 도달했습니다. 이번 주말에 끝났을 때 독일의 주요 경제 전문가와 최고 경영자가 자살을 했고, 시장은 죽었습니다. 독일 정부는 행동해야합니다."
+black.5.a:0 "우리는 경제를 개혁해야한다."
+black.6.t:0 "검은 월요일 이후 6 개월"
+black.6.d:0 "검은 월요일과 검은 일주일 이후 6 개월이 지났습니다. 그 이후 독일이 직면한 최악의 문제 중 하나는 실업률의 상승입니다."
+black.6.a:0 "실업률이 매우 높다."
+black.7.t:0 "검은 월요일 이후 6 개월"
+black.7.d:0 "검은 월요일과 검은 일주일 이후 6 개월이 지났습니다. 그 이후 독일이 직면한 최악의 문제 중 하나는 실업률의 상승입니다."
+black.7.a:0 "실업률이 높다."
+black.8.t:0 "검은 월요일 이후 6 개월"
+black.8.d:0 "검은 월요일과 검은 일주일 이후 6 개월이 지났습니다. 그 이후 독일이 직면한 최악의 문제 중 하나는 실업률의 상승입니다."
+black.8.a:0 "실업이 조금 늘었다."
+black.9.t:0 "검은 월요일 이후 1 년"
+black.9.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업의 상태는 여전히 타격에서 회복되고 있습니다."
+black.9.a:0 "경제가 더욱 악화되었다."
+black.10.t:0 "검은 월요일 이후 1 년"
+black.10.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업의 상태는 여전히 타격에서 회복되고 있습니다."
+black.10.a:0 "경제가 아직 회복되지 않았다 ..."
+black.11.t:0 "검은 월요일 이후 1 년"
+black.11.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 산업의 상태는 여전히 타격에서 회복되고 있습니다."
+black.11.a:0 "경제가 조금 회복되었다."
+black.12.t:0 "검은 월요일 이후 2 년"
+black.12.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 경제는 더 안정적이게 됬으며 실업률은 매일 감소하고 있습니다."
+black.12.a:0 "마침내 경제가 회복되었다!"
+black.13.t:0 "검은 월요일 이후 2 년"
+black.13.d:0 "검은 월요일과 검은 일주일 이후 1 년이 지났습니다. 우리 경제는 더 안정적이게 됬으며 실업률은 매일 감소하고 있습니다."
+black.13.a:0 "경제는 여전히 나쁘다 ..."
+black.20.t:0 "전쟁이 경제를 살리고있습니다."
+black.20.d:0 "전쟁으로 인해 여러 분야의 산업 생산이 급증했으며 노동력은 애국심을 충족하기 위해 노력했습니다. 이것은 검은 월요일 충격의 여파를 줄임으로써 경제에 순 긍정적 효과를 가져왔다. 경제가 마침내 되살아날 흔적을 보이고있는 것 같습니다!"
+black.20.a:0 "멋지군!"
+black.21.t:0 "식민지에서의 재정적 어려움"
+black.21.d:0 "상승하는 인플레이션과 결과적으로 독일의 식민지에 대한 국가 지출은 검은 월요일 이전의 세금으로 유지하기에는 너무 커지게되었습니다. 일부 독단적인 정치인들은 세금 인상을 제안하지만, 독일 식민지를 돕기 위해 독일 국민들에게 세금을 부과하는 것은 분명히 현재의 경제 상황에서는 지지받지 못할것입니다. 독일의회의 대부분은 단지 식민지 재산에 대한 제한된 재정 지원을 제안합니다. 우리는 무엇을 해야 할까요?"
+black.21.a:0 "식민지의 요구를 충족시키기 위해 세금을 올려라."
+black.21.b:0 "직접적인 통제하에 있는 식민지들에게만 경제적 지원을 해라."
+black.21.c:0 "더이상의 지출은 않된다. 그들은 다른 수입원을 찾아야 할 것이다."
+black.22.t:0 "주요 은행 파산 선언"
+black.22.d:0 "오늘, 우리 경제의 상태 때문에 주요 은행은 불행하게도 파산을 선언했습니다. 우리는 계좌 소유자를 도와야 합니까 아니 개입을 피해야합니까?"
+black.22.a:0 "아무것도하지 말아라."
+black.22.b:0 "우리의 시민들을 도와주어라!"
+black.23.t:0 "주요 산업 회사 파산 선언"
+black.23.d:0 "오늘날 우리 경제의 상태 때문에 주요 산업체는 불행하게도 파산을 선언했습니다. 여러 공장이 전국에서 폐쇄 될 것입니다."
+black.23.a:0 "좋지 않다..."
 black.50.t:0 "제국 경제 정책"
-black.50.d:0 "Finally, three years after Black Monday, our economy is slowly recovering! This can be the time to invest more to further secure our national interests!"
-black.50.a:0 "본국에 투자하라!"
-black.50.b:0 "식민지에 투자하라!"
-black.50.c:0 "영향권 내 국가들에 투자하라!"
-black.50.e:0 "이웃나라들에게 새 경제 협력 정책을 알려라!"
+black.50.d:0 "마침내, 검은 월요일 이후 3 년이 지나면서 우리 경제는 천천히 회복되고 있습니다! 우리의 국가 자산을 더욱 안전하게하기 위해 더 많은 비용을 투자 할 수 있습니다!"
+black.50.a:0 "본국에 투자해라!"
+black.50.b:0 "식민지에 투자해라!"
+black.50.c:0 "우리의 영향권에 투자해라!"
+black.50.e:0 "이웃과 새로운 경제 협력 계획을 발표해라!"
 
 ### Austria and Black Monday ###
-black.200.t:0 "오스트리아를 강타한 검은 월요일"
-black.200.d:0 "Black Monday has hit Germany and it would not be long before its shock-wave rippled across Europe. Given it's close proximity, Austria was among the first to affected. The economy is struggling and troubling times lie ahead."
-black.200.a:0 "아, 맙소사!"
+black.200.t:0 "검은 월요일의 오스트리아 강타"
+black.200.d:0 "검은 월요일은 독일을 강타했으며 충격파가 유럽 전역으로 물결치기까지 오랜 시간이 걸리지 않을 것이다. 가까운 거리에 있기 때문에 오스트리아는 처음으로 영향을 받았습니다. 경제는 어려움을 겪고 있고 고통의 시기는 앞당겨 있습니다."
+black.200.a:0 "오, 하나님!"
