KR_Annexation Update

--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -1,40 +1,40 @@
 ﻿l_english:
 
 ### Events ###
-annex.1.t:0 "The Annexation of Flanders-Wallonia"
+annex.1.t:0 "플랑드르-왈로리아 합병"
 annex.1.d:0 "The Revolution is showing progress; we have taken Flanders-Wallonia and liberated the people from the violent reactionary government created by the Germans."
-annex.1.a:0 "Next Stop: Berlin!"
-annex.2.t:0 "The Annexation of Switzerland"
+annex.1.a:0 "다음은 베를린이다!"
+annex.2.t:0 "스위스 합병"
 annex.2.d:0 "After fierce fighting in the Alpine Mountains, we have conquered and annexed Switzerland. The Swiss army has surrendered, and the territory is under our control, but the people are still resistant."
-annex.2.a:0 "Liberate them!"
-annex.2.b:0 "Occupy them!"
-annex.3.t:0 "The Annexation of Bulgaria"
+annex.2.a:0 "스위스를 독립시켜줘라!"
+annex.2.b:0 "스위스를 집어삼켜라!"
+annex.3.t:0 "불가리아 합병"
 annex.3.d:0 "After a long fight with the Bulgarian Empire, we have launched a full offensive and forced the Bulgarian Army to surrender. Sofia is now in our hands!"
 annex.4.t:0 "Integration of Switzerland"
 annex.4.d:0 "We've controlled Switzerland for some time now, and it seems like the local population have finally accepted our rule."
 annex.4.a:0 "Perfect!"
 annex.5.t:0 "Integration of Bulgaria"
 annex.5.d:0 "We've controlled Bulgaria for some time now, and it seems like the local population have finally accepted our rule."
-annex.6.t:0 "The Annexation of Romania"
+annex.6.t:0 "루마니아 합병"
 annex.6.d:0 "The Iron Guard regime has been extinguished and their crimes against humanity are finally stopped. We no longer have to worry about them."
 annex.6.b:0 "Seize Bessarabia and liberate Romania"
 annex.7.t:0 "Integration of Romania"
 annex.7.d:0 "We've controlled Romania for some time now, and it seems like the local population have finally accepted our rule."
-annex.8.t:0 "The Annexation of Serbia"
+annex.8.t:0 "세르비아 합병"
 annex.8.d:0 "The Serbian State has been annexed, our troops are parading in Belgrade. A major threat to the stability in the region has been removed."
 annex.9.t:0 "Integration of Serbia"
 annex.9.d:0 "We've controlled Serbia for some time now, and it seems like the local population have finally accepted our rule."
-annex.10.t:0 "The Annexation of Greece"
+annex.10.t:0 "그리스 합병"
 annex.10.d:0 "The Greek Peninsula has been secured and Greece has been annexed. Fate of the entire Greek nation lies in our hands..."
 annex.11.t:0 "Integration of Greece"
 annex.11.d:0 "We've controlled Greece for some time now, and it seems like the local population have finally accepted our rule."
-annex.12.t:0 "The Annexation of Hungary"
+annex.12.t:0 "헝가리 합병"
 annex.12.d:0 "Hungary has been annexed. Our forces are policing the streets of Budapest and partisans are being detained all across the countryside."
-annex.12.a:0 "Restore Greater Hungary"
+annex.12.a:0 "대헝가리 복원"
 annex.12.c:0 "Restore national Hungary"
 annex.13.t:0 "Integration of Hungary"
 annex.13.d:0 "We've controlled Hungary for some time now, and it seems like the local population have finally accepted our rule."
-annex.14.t:0 "The Annexation of Austria"
+annex.14.t:0 "오스트리아 합병"
 annex.14.d:0 "Austria has been annexed and our troops are patrolling the streets of Vienna to prevent a rebellion or anything that could cause further instability."
 annex.14.c:0 "No, we will recreate an old idea..."
 annex.15.t:0 "An old idea made new"
@@ -53,14 +53,14 @@ annex.17.c:0 "Hand it over to our Austrian friends!"
 annex.17.e:0 "Give Istria to Slovenia and the rest to Austria"
 annex.18.t:0 "Territories regained!"
 annex.18.d:0 "Our loyal allies have returned us the lands taken by the vile Austrians! This is a great day for the Italian people!"
-annex.18.a:0 "Hurrah!"
+annex.18.a:0 "우라!"
 annex.19.t:0 "Integration of Austrian Italy"
 annex.19.a:0 "The territories of Austrian Italy have finally become part of our nation!"
-annex.20.t:0 "The Annexation of Croatia"
+annex.20.t:0 "크로아티아 합병"
 annex.20.d:0 "The Croats are now taking their orders from us, the way things should be. There is some resistance among them, but it will be crushed under our heels!"
-annex.21.t:0 "The Annexation of Slovenia"
+annex.21.t:0 "슬로베니아 합병"
 annex.21.d:0 "Our troops are marching through the capital of Slovenia and the country finally bowed before our might. We must decide what to do with it."
-annex.22.t:0 "The Annexation of Poland"
+annex.22.t:0 "폴란드 합병"
 annex.22.d:0 "Our soldiers are marching through the streets of Warsaw after the Polish army surrendered early yesterday afternoon."
 annex.22.b:0 "These damn poles never give up..."
 annex.22.c:0 "Annex border strip and liberate Poland"
@@ -71,11 +71,11 @@ annex.23.d:0 "We've controlled Poland for some time now, and it seems like the l
 annex.24.t:0 "Poland Under the German Heel"
 annex.24.d:0 "A German goes on a holiday in Poland and is stopped at the border. The guard asks him some questions. Your name? Hans Schmidt. Where do you live? In Berlin. Occupation?"
 annex.24.a:0 "Not this time, I'm only visiting!"
-annex.25.t:0 "The Annexation of Finland"
+annex.25.t:0 "핀란드 합병"
 annex.25.d:0 "The Finnish soldiers have been defeated and our Army is marching through Helsinki."
 annex.26.t:0 "Integration of Finland"
 annex.26.d:0 "We've controlled Finland for some time now, and it seems like the local population have finally accepted our rule."
-annex.27.t:0 "The Annexation of Norway"
+annex.27.t:0 "노르웨이 합병"
 annex.27.d:0 "The Norwegian Army has surrendered, and we have annexed Norway. Our flag waives over the former Capitol building in Oslo as our military campaign comes to an end. Now we must begin a campaign to destroy the Norwegian partisans."
 annex.27.c:0 "Create a new Scandinavian union"
 warning_scandinavia:0 "§RAttention! Forming the Scandinavian Union will make you loose the Swedish focus tree.§!"
