--- a/Kaiserreich Korean Translation/localisation/KR_Frontend_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Frontend_l_english.yml
@@ -1,14 +1,14 @@
 ﻿l_english:
 
-custom_diff_strong_ger:0 "Strengthen German Empire"
-custom_diff_strong_frasri:0 "Strengthen the Internationale"
-custom_diff_strong_eng:0 "Strengthen Union of Britain"
-custom_diff_strong_can:0 "Strengthen Canada"
-custom_diff_strong_rus:0 "Strengthen Russia"
-custom_diff_strong_sov:0 "Strengthen Soviets"
-custom_diff_strong_aus:0 "Strengthen Austria"
-custom_diff_strong_usa:0 "Strengthen USA"
-custom_diff_strong_nfa:0 "Strengthen National France"
-custom_diff_strong_ita:0 "Strengthen Italian Federation"
-custom_diff_strong_jap:0 "Strengthen Japan"
-custom_diff_strong_qie:0 "Strengthen Qing Empire"
+custom_diff_strong_ger:0 "독일 제국 강화"
+custom_diff_strong_frasri:0 "인터네셔널 강화"
+custom_diff_strong_eng:0 "브리튼 연방 강화"
+custom_diff_strong_can:0 "캐나다 강화"
+custom_diff_strong_rus:0 "러시아 강화"
+custom_diff_strong_sov:0 "소련 강화"
+custom_diff_strong_aus:0 "오스트리아 강화"
+custom_diff_strong_usa:0 "미국 강화"
+custom_diff_strong_nfa:0 "국가주의 프랑스 강화"
+custom_diff_strong_ita:0 "이탈리아 연방 강화"
+custom_diff_strong_jap:0 "일본 강화"
+custom_diff_strong_qie:0 "청나라 "
