--- a/Kaiserreich Korean Translation/localisation/KR_Governments_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Governments_l_english.yml
@@ -1,34 +1,34 @@
 ﻿l_english:
 
-totalist_noun:0 "Totalism"
-syndicalist_noun:0 "Syndicalism"
-radical_socialist_noun:0 "Radical Socialism"
-social_democrat_noun:0 "Social Democracy"
-social_liberal_noun:0 "Social Liberalism"
-market_liberal_noun:0 "Market Liberalism"
-social_conservative_noun:0 "Social Conservatism"
-authoritarian_democrat_noun:0 "Authoritarian Dem."
-paternal_autocrat_noun:0 "Paternal Autocracy"
-national_populist_noun:0 "National Populism"
+totalist_noun:0 "전체주의"
+syndicalist_noun:0 "노동조합주의"
+radical_socialist_noun:0 "급진사회주의"
+social_democrat_noun:0 "사회민주주의"
+social_liberal_noun:0 "사회자유주의"
+market_liberal_noun:0 "시장자유주의"
+social_conservative_noun:0 "사회보수주의"
+authoritarian_democrat_noun:0 "권위민주주의"
+paternal_autocrat_noun:0 "세습전제주의"
+national_populist_noun:0 "국가대중주의"
 
-totalist_desc:0 "Totalist"
-syndicalist_desc:0 "Syndicalist"
-radical_socialist_desc:0 "Radical Socialist"
-social_democrat_desc:0 "Social Democrat"
-social_liberal_desc:0 "Social Liberal"
-market_liberal_desc:0 "Market Liberal"
-social_conservative_desc:0 "Social Conservative"
-authoritarian_democrat_desc:0 "Authoritarian Democrat"
-paternal_autocrat_desc:0 "Paternal Autocrat"
-national_populist_desc:0 "National Populist"
+totalist_desc:0 "전체주의자"
+syndicalist_desc:0 "노동조합주의자"
+radical_socialist_desc:0 "급진사회주의자"
+social_democrat_desc:0 "사회민주주의자"
+social_liberal_desc:0 "사회자유주의자"
+market_liberal_desc:0 "시장자유주의자"
+social_conservative_desc:0 "사회보수주의자"
+authoritarian_democrat_desc:0 "권위민주주의자"
+paternal_autocrat_desc:0 "세습전제주의자"
+national_populist_desc:0 "국가대중주의자"
 
-totalist_subtype_desc:0 "Totalism is both a specific ideology, and a category sometimes given to name various radical left wing ideologies with similar characteristics. As an ideology, Totalism promotes a new direction for socialism in the world, emphasising the the role of the socialist state as the core ideal of the nation, while devaluing or abandoning the Marxist ideas of worker empowerment and a classless utopia. Totalists look to centralise and expand the governments' powers in socialist states, believing that the goal of the government is to build socialism in the state, and often use nationalist and militarist rhetoric and policies. Due to their authoritarian nature, other authoritarian or totalitarian socialist ideologies have gained the name "Totalist" even if they are not affiliated with the Totalist charter."
-syndicalist_subtype_desc:0 "Anarcho-Syndicalism is the leading Marxist revolutionary ideology, which promotes democratic federations of collectivised trade unions as the basic political and economic units of the socialist state. Trade unions are equally owned by all the workers who are members in them, and have complete economic and political control over the workplaces they organise, and are given great amounts of autonomy from the central government. On a larger scale the various trade unions elect members to regional and national trade union congresses, which form the legislative and executive powers of the central government."
-radical_socialist_subtype_desc:0 "Radical Socialism is a catch-all phrase for the various Socialist, Communist and Anarchist ideologies that aren't directly associated with Syndicalism. Countries with this ideology operate with a socialist economy, usually accompanied with some kind of democratic form of government; Their ultimate goal is to create a paradise for the working class, the details of which varies from movement to movement."
-social_democrat_subtype_desc:0 "Social Democracy is an ideology whose goal is to reform capitalism and humanise it by aligning it with the ethical ideals of social welfare while maintaining the capitalist mode of production, rather than creating an alternative socialist economic system. While usually promoting a plutocratic form of government and a heavily regulated market economy, some more radical streams exist."
-social_liberal_subtype_desc:0 "Social liberalism is a variation on mainstream Market liberalism, with the main difference being is the inclusion of various civil freedoms as basic human rights. Professing progressive social and economic policies the social liberals aim to create a society where every individual is free to live his own life with full opportunities regardless of their status"
-market_liberal_subtype_desc:0 "Market liberals see themselves as the mainstream liberal ideology. The main tenants of Market liberalism are an unregulated free market and a democratic plutocratic political system. Market liberals believe that the freer the market the freer the people, and they will staunchly defend the political and economic rights of the individual."
-social_conservative_subtype_desc:0 "Conservatism is a political ideology centred on preserving traditional beliefs, attitudes and philosophy as well as the traditional power dynamic of society while using the democratic system. Opposed to both radical and moderate changes to the status quo, conservatives want to keep society in order and stable. Usually promote a regulated market economy, but more liberal economic policies aren't unheard of"
-authoritarian_democrat_subtype_desc:0 "Authoritarian democracy is an ideology that combines a strong executive power with a representative parliament and a partial democratic political system. Authoritarian democratic regimes often take a conservative stance on social issues and promote liberal-capitalist economies with limited state intervention. The aim of these regimes are to maintain national stability and provide the people both a popular and responsible government."
-paternal_autocrat_subtype_desc:0 "Paternal Autocracy is not a political ideology in the normal sense of the word, but rather a general term for the attitude that these governments hold towards their citizens: The people are all subjects of the leader, either a king or a dictator, and it is the leader's job and duty to lead the state and society towards the righteous and best path while uniting the people of under his benevolent protection. These countries usually have a very authoritarian government, conservative social views and a state controlled economy."
-national_populist_subtype_desc:0 "Encompassing a variety of ultra-nationalist and militaristic movements, National Populism typically venerates devotion to the state, uniting the people under a strong leader and a corporate economy. Often espousing racial politics and violent rhetoric, National Populism is vehemently opposed by most other political parties."
+totalist_subtype_desc:0 "전체주의는 단어 그대로의 이념, 또는 비슷한 특성을 가진 다양한 좌파 사상을 동시에 지칭하기도 합니다. 이념으로서 전체주의는 세계 속 사회주의의 새 지향점을 추구합니다. 강해진 노동자와 계급 철폐의 유토피아를 지향하면서도 마르스크주의적 이상을 약화시키거나 버리지 않으며, 이것을 기본 이념으로 삼는 것이 사회주의 국가의 역할임을 강조합니다. 전체주의자들은 정부의 목적이 사회주의 국가 건설이라 믿기에 힘을 확장하고 집권화하려 합니다. 이념적 토대를 다지는데 필수적이라 여기기 때문입니다. 간혹 국가주의자와 군국주의자들의 언어와 정책을 모방하기도 합니다. 이들의 권위주의적 성향 탓에, 다른 권위주의자나 전체주의적 사회주의자들은 뜻 밖에도 “전체주의자”라는 이름을 얻게 되었습니다."
+syndicalist_subtype_desc:0 "무정부적 노동조합주의는 마르크스주의적 혁명 이념입니다. 집산주의적인 노동 조합으로 구성된 민주적인 연방 국가를 기반으로, 사회주의 경제의 국가를 지향합니다. 노동 조합은 모든 노동자들이 공평하게 소유하게 하며 경제, 정치적 통제는 일터를 벗어나서도 연대하도록 합니다. 중앙 정부로부터 큰 자치권을 부여받길 원합니다. 규모가 큰 노동 조합의 일원 선출은, 강한 힘을 갖추고 중앙 정부의 역할을 하는, 지역적이고 국제적인 조합 회의에서 이루어집니다.."
+radical_socialist_subtype_desc:0 "급진사회주의는 노동조합주의로도 연대하지 못한 사회주의자, 공산주의자와 무정부주의자들이 한데 모인 이념입니다. 이 이념을 따르는 나라들은 사회주의적 경제를 가동하고 있습니다. 민주주의적 형태를 취한 정부를 선호하며 최종적인 목표는 노동 계급의 낙원을 만드는 것입니다. 세부적인 협의는 각 운동권에 따라 다릅니다.."
+social_democrat_subtype_desc:0 "사회민주주의는 자본주의를 인간적으로 개혁하는데 목표를 두는 이념입니다. 대안적인 사회주의적 경제 체제는 창안하기 보다, 자본가들의 생산이 계속되는 와중에도 사회 복지의 윤리적 이상으로 그것을 가능케 할 수 있다 믿습니다. 금권주의적 정부와 강한 규제가 작용하는 시장 경제를 선호합니다. 보다 급진적인 분파도 존재하곤 합니다."
+social_liberal_subtype_desc:0 "사회자유주의는 주류 시장자유주의에서 갈라져 나왔습니다. 가장 큰 차이점은 시민의 자유보다 기본적인 인권을 중시한다는 것입니다. 사회자유주의자들은 사회와 경제의 진보를 공언하며 사회 구성원들이 현재의 상황와는 무관하게 삶 속에서 완벽한 자유를 누릴 수 있도록 만들고자 합니다."
+market_liberal_subtype_desc:0 "시장자유주의자들은 자유주의 이념의 주류를 자처합니다. 시장자유주의의 기본 골조는 규제 없는 자유 시장과 민주주의와 금권주의로 대표되는 정치 체제입니다. 더 자유로운 시장은 더 자유로운 사람을 있게 한다 믿습니다. 사유 재산에 대한 정치적, 경제적 권리를 지키는 것에 온 힘을 다합니다.."
+social_conservative_subtype_desc:0 "보수주의는 전통적인 가치를 지키고, 강한 역동성을 지닌 사회보다는 오랜 예법과 철학으로 민주주의 체제를 유지하고자 합니다. 급진적이고 세속적인 변화는 지양하고 현상 유지에 초점을 둡니다. 보수주의자들은 사회를 질서 있고 안정적으로 두고 싶어합니다. 전례없이 자유주의적인 경제 정책보다는 규제를 동반한 시장 경제를 선호합니다."
+authoritarian_democrat_subtype_desc:0 "권위민주주의는 대의 입헌의회를 등에 업은 강한 권력과 부분적 민주주의가 결합된 정치 체제에 대한 이념입니다. 권위민주주의 정권은 사회 문제에 보수적인 태도를 취하며 제한적인 국가 개입을 받아들이는 자유주의적 자본가들을 선호합니다. 이러한 정권의 중점은 국가 안정을 유지하고 인기와 책임 있는 정부를 국민에게 안겨주기 위함입니다."
+paternal_autocrat_subtype_desc:0 "세습전제주의는 낱말의 일반적인 의미로 이해될 수 있는 정치 이념이 아닙니다.  국민은 국왕이나 독재자와 같은 지도자의 종복에 불과합니다. 국가와 사회를 이끄는 지도자의 일과 의무는 신성하며 그 자애로운 보호 아래에서 국민이 단결하는 것이 최선의 길이라 믿습니다. 이런 나라들은 매우 권위적인 정부를 가집니다. 보수적인 사회관과 국가주도적인 경제를 신봉합니다."
+national_populist_subtype_desc:0 "다양한 유형의 국수주의자와 군국주의적 운동가들을 함께 이르는 표현입니다. 국가대중주의는 대개 국가에 대한 헌신을 찬양합니다. 강력한 지도자와 기업경제 아래에 국민들이 단결해야 한다고 믿습니다. 때로는 인종차별적인 정책이나 폭력적 언어를 옹호하기도 합니다. 국가대중주의는 다른 이념의 정당들과 격렬히 대립합니다."
