--- a/Kaiserreich Korean Translation/localisation/KR_Crete_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Crete_l_english.yml
@@ -1,59 +1,59 @@
 ﻿l_english:
 
 ### Opinion Modifiers ###
-CRE_SEL:0 "Sale of Crete"
-CRE_REF:0 "Sale of Crete"
+CRE_SEL:0 "크레타 매각"
+CRE_REF:0 "크레타 매각"
 
 ### Events ###
-crete.1.t:0 "The Cretan Question"
-crete.1.d:0 "With our economy in shambles after Black Monday, our Colonial Empire has been under fairly harsh scrutiny. The main territory that has been under examination is Crete. Crete is larger and harder to defend than Malta, and the upkeep is higher as well. To help with our deficit, it has been proposed that we essentially sell the island to either the Ottomans or the Greeks. What shall we do?"
-crete.1.a:0 "Keep Crete under our influence."
-crete.1.b:0 "Offer Crete to the Ottomans."
-crete.1.c:0 "Offer Crete to the Greeks."
+crete.1.t:0 "크레타에 대한 의문"
+crete.1.d:0 "검은 월요일 이후 우리의 경제는 난관을 겪고 있습니다. 제국의 식민지로 남길 땅을 엄중히 검토해야 합니다. 중점적으로 조사 중인 땅은 크레타입니다. 크레타는 크고 방어하기에도 몰타보다 어렵습니다. 또한 유지 비용도 더 많이 듭니다. 적자를 만회해야 합니다. 우선 이 땅을 오스만이나 그리스에게 매각해야 합니다. 어쩌시겠습니까?"
+crete.1.a:0 "크레타는 우리의 영향권에 남는다."
+crete.1.b:0 "오스만에게 크레타를 판다."
+crete.1.c:0 "그리스에게 크레타를 판다."
 
-crete.2.t:0 "The Sale of Crete"
-crete.2.d:0 "The Germans have come offering the sale of Crete. While it would obviously cost us a sizeable amount of money, having the island once more would greatly strengthen our position in the Mediterranean. What shall our reply be?"
-crete.2.a:0 "Welcome home, Crete!"
-crete.2.b:0 "We do not need that rock."
+crete.2.t:0 "크레타 매각"
+crete.2.d:0 "독일인들이 크레타 섬을 팔겠다는 제안을 보냈습니다. 우리에게는 분명히 큰 돈입니다만, 섬을 가진다면 지중해에서 우리의 위치를 다시 한번 확고히 할 수 있습니다. 어떻게 답신을 보낼까요?"
+crete.2.a:0 "잘 돌아왔다, 크레타여!"
+crete.2.b:0 "돌무더기는 필요없다."
 
-crete.3.t:0 "The Sale of Crete"
-crete.3.d:0 "The Ottoman Ambassador has sent a message to us, declaring that the Sultan has agreed to buy Crete. We have begun to transfer control of the Cretan State to them."
-crete.3.a:0 "Great."
+crete.3.t:0 "크레타 매각"
+crete.3.d:0 "오스만 대사가 전보를 보내왔습니다. 술탄께서 크레타 구입을 수락하셨다고 합니다. 크레타 섬에 대한 통제권을 이양하기 위한 준비를 해야겠습니다."
+crete.3.a:0 "훌륭해."
 
-crete.4.t:0 "The Ottomans don't want Crete"
-crete.4.d:0 "The Ottomans have replied to our offer, flatly stating that they do not want Crete. What shall we do?"
-crete.4.a:0 "Keep Crete under our influence then."
-crete.4.b:0 "Offer it to Greece."
+crete.4.t:0 "오스만은 크레타를 원치 않는다"
+crete.4.d:0 "오스만이 우리의 제안에 대해 답했습니다. 단호하게도 크레타를 원하지 않는다고 합니다. 어떻게 할까요?"
+crete.4.a:0 "그럼 크레타는 우리의 영향권에 남는다."
+crete.4.b:0 "그리스와 이야기해보자."
 
-crete.5.t:0 "The Sale of Crete"
-crete.5.d:0 "The Germans have come offering the sale of Crete. While it would obviously cost us a sizeable amount of money, having the island once more would greatly strengthen our position in the Mediterranean. What shall our reply be?"
-crete.5.a:0 "Welcome home, Crete"
-crete.5.b:0 "We do not need that rock."
+crete.5.t:0 "크레타 매각"
+crete.5.d:0 "독일인들이 크레타 섬을 팔겠다는 제안을 보냈습니다. 우리에게는 분명히 큰 돈입니다만, 섬을 가진다면 지중해에서 우리의 위치를 다시 한번 확고히 할 수 있습니다. 어떻게 답신을 보낼까요?"
+crete.5.a:0 "잘 돌아왔다, 크레타여"
+crete.5.b:0 "돌무더기는 필요없다."
 
-crete.6.t:0 "The Sale of Crete"
-crete.6.d:0 "The Greek Ambassador has sent a message to us, declaring that the Greek King has agreed to buy Crete. We have begun to transfer control of the Cretan State to them."
-crete.6.a:0 "Great!"
+crete.6.t:0 "크레타 매각"
+crete.6.d:0 "그리스 대사가 전보를 보내왔습니다. 국왕께서 크레타 구입을 수락하셨다고 합니다. 크레타 섬에 대한 통제권을 이양하기 위한 준비를 해야겠습니다."
+crete.6.a:0 "훌륭해!"
 
-crete.7.t:0 "The Greeks don't want Crete"
-crete.7.d:0 "The Greeks have replied to our offer, flatly stating that they do not want Crete. What shall we do?"
-crete.7.a:0 "Keep Crete under our influence then"
-crete.7.b:0 "Offer it to the Ottoman Empire."
+crete.7.t:0 "그리스는 크레타를 원치 않는다"
+crete.7.d:0 "그리스가 우리의 제안에 대해 답했습니다. 단호하게도 크레타를 원하지 않는다고 합니다. 어떻게 할까요?"
+crete.7.a:0 "그럼 크레타는 우리의 영향권에 남는다."
+crete.7.b:0 "오스만 제국과 이야기해보자."
 
-crete.8.t:0 "The Cretan State"
-crete.8.d:0 "With the transaction finalised with the Germans, the status of the Cretan state has come to the forefront of our agenda. As the Cretan State was originally created because of our weak grasp on the island, the majority of the ministers are pushing to just shuffling the government in Crete. However a few hawkish men are calling for direct annexation. What shall we do?"
-crete.8.a:0 "Install a new Cretan government."
-crete.8.b:0 "End its autonomy!"
+crete.8.t:0 "크레타국"
+crete.8.d:0 "독일과의 거래가 끝났습니다. 크레타국의 상황은 우리나라에 맞서는 전쟁터나 다름없습니다. 이렇듯 고유적으로 형성된 크레타국의 정체성은 섬에 대한 통제가 약했기 때문입니다. 많은 장관들이 크레타 정부를 속여넘기자는 말을 합니다. 몇몇 매파 인물들은 직접적인 합병을 이야기합니다. 어쩌시겠습니까?"
+crete.8.a:0 "새 크레타 정부를 수립한다."
+crete.8.b:0 "자치권은 끝이다!"
 
-crete.9.t:0 "The Cretan State"
-crete.9.d:0 "With the transaction finalised with the Germans, the status of the Cretan state has come to the forefront of our agenda. As Crete was ours before we lost the Weltkrieg, the majority of the ministers are pushing to annex the Cretan state. However, a few men are calling for only an indirect subordination of Crete. What shall we do?"
-crete.9.a:0 "Install a new Cretan government."
-crete.9.b:0 "Hurrah for the second Enosis!"
+crete.9.t:0 "크레타국"
+crete.9.d:0 "독일과의 거래가 끝났습니다. 크레타국의 상황은 우리나라에 맞서는 전쟁터나 다름없습니다.  세계 대전 이전까지 크레타는 우리 땅이었습니다. 많은 장관들이 크레타국을 합병하자는 말을 합니다. 몇몇 인물들은 간접적으로 예속시키자는 이야기를 합니다. 어쩌시겠습니까??"
+crete.9.a:0 "새 크레타 정부를 수립한다."
+crete.9.b:0 "두 번째 에노시스를 찬미하라!"
 
-crete.10.t:0 "The Second Weltkrieg!"
-crete.10.d:0 "The Germans and French are once more at war! While we have duly joined the war against the Syndicalists, the 'Enosis' brotherhood have been gathering strength..."
-crete.10.a:0 "Good riddance!"
-crete.10.b:0 "The Enosis brotherhood coups the government!"
+crete.10.t:0 "제 2차 세계 대전!"
+crete.10.d:0 "독일과 프랑스가 다시 전쟁을 벌였습니다! 우리에겐 노동조합주의자들에 대항해 참전할 의무가 있습니다. ‘에노시스’ 형제들이 힘을 빌려줄 것입니다..."
+crete.10.a:0 "속이 시원하군!"
+crete.10.b:0 "에노시스 형제들이 정부를 전복시켰다!"
 
-crete.11.t:0 "Crete is Greek once more!"
-crete.11.d:0 "With the Germans embroiled in their war with the Syndicalists, our brothers in Crete took the chance to rise against the Germans!"
-crete.11.a:0 "Hurrah for the second Enosis!"
+crete.11.t:0 "크레타는 또 다시 그리스로!"
+crete.11.d:0 "독일인들은 노동조합주의자들과의 전쟁에 또 휘말렸습니다. 크레타의 우리 형제들이 독일에 맞서 일어날 기회입니다!"
+crete.11.a:0 "두 번째 에노시스를 찬미하라!"
