--- a/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
@@ -1,92 +1,92 @@
 ﻿l_english:
 
 ### Loading Messages ###
-LOADING_GUI:0 "Signing the Peace with Honour"
+LOADING_GUI:0 "명예로운 평화를 노래하는 중"
 #"Loading GUI"
-LOADING_HISTORY:0 "Hiding Trotsky"
+LOADING_HISTORY:0 "트로츠키는 숨기는 중"
 #"Loading History"
-LOADING_SAVEGAME:0 "Reshaping history: $NAME$"
+LOADING_SAVEGAME:0 "역사를 다시 쓰는 중: $NAME$"
 #"Loading savegame: $NAME$"
-LOADING_SAVEGAME_NO_NAME:0 "Reshaping history"
+LOADING_SAVEGAME_NO_NAME:0 "역사를 다시 쓰는 중"
 #"Loading savegame"
-LOADING_DATABASES:0 "Purging Syndicalists"
+LOADING_DATABASES:0 "노동조합주의자들을 숙청하는 중"
 #"Loading databases"
-LOADING_MAP_SPRITES:0 "Denouncing Monarchists"
+LOADING_MAP_SPRITES:0 "왕당파들을 비난하는 중"
 #"Loading sprites"
-LOAD_GFX_PDXMAP_SHADERS:0 "Breaking the Chains"
+LOAD_GFX_PDXMAP_SHADERS:0 "사슬을 끊어내는 중"
 #"Loading Map(Creating Shaders)..."
-LOAD_GFX_PDXMAP_TERRAIN:0 "Finding a place in the sun"
+LOAD_GFX_PDXMAP_TERRAIN:0 "젊은이의 양지를 찾는 중"
 #"Loading Map(Creating Terrain)..."
-LOAD_GFX_PDXMAP_BORDERS:0 "Restoring the Mongol Empire"
+LOAD_GFX_PDXMAP_BORDERS:0 "몽골 제국을 복원하는 중"
 #"Loading Map(Creating Borders)..."
-LOAD_GFX_PDXMAP_TEXTURES:0 "Expelling Western imperialists"
+LOAD_GFX_PDXMAP_TEXTURES:0 "서양 제국주의자들을 축출하는 중"
 #"Loading Map(Creating Textures)..."
-LOAD_GFX_PDXMAP_TREES:0 "Assassinating Kerensky"
+LOAD_GFX_PDXMAP_TREES:0 "케렌스키를 암살하는 중"
 #"Loading Map(Creating Trees)..."
-LOAD_GFX_PDXMAP_RIVERS:0 "Making every man a king"
+LOAD_GFX_PDXMAP_RIVERS:0 "만인을 왕으로 만드는 중"
 #"Loading Map(Creating Rivers)..."
-LOAD_GFX_PDXMAP_STATIC_OBJECTS:0 "Sharing our wealth"
+LOAD_GFX_PDXMAP_STATIC_OBJECTS:0 "부를 분배하는 중"
 #"Loading Map(Creating objects)..."
-LOAD_EVENTS:0 "Centralising the Dual Monarchy"
+LOAD_EVENTS:0 "이중 왕조를 중앙집권화하는 중"
 #"Loading Events"
-LOAD_GFX:0 "Fighting a land war in Asia"
+LOAD_GFX:0 "아시아에서 지상전을 벌이는 중"
 #"Loading Graphics"
-LOADING_MAIN_MENU:0 "Propping up dying empires"
+LOADING_MAIN_MENU:0 "죽어가는 제국을 지탱하는 중"
 #"Loading main menu"
-PRECALC_NAVAL_DIST:0 "Deploying the Kaiserliche Marine"
+PRECALC_NAVAL_DIST:0 "제국 해군을 전개시키는 중"
 #"Precalculating Naval Distances"
-EXITING_TO_FRONTEND:0 "Restoring Napoleon"
+EXITING_TO_FRONTEND:0 "나폴레옹 왕가를 복원하는 중"
 #"Returning to main menu"
-LOAD_INIT:0 "Smuggling in Shanghai"
+LOAD_INIT:0 "상하이에서 밀수하는 중"
 #"Initialising Game..."
-LOAD_FLAGS:0 "Saving American Democracy"
+LOAD_FLAGS:0 "미국의 민주주의를 구원하는 중"
 #"Creating Flags"
-PROC_FLAGS:0 "Rebuilding the Chinese Empire"
+PROC_FLAGS:0 "중화 제국을 재건설하는 중"
 #"Processing Flags"
-INIT_MAP_LOGIC:0 "Escaping to Africa"
+INIT_MAP_LOGIC:0 "아프리카를 탈출하는 중"
 #"Initialising map logic"
-INIT_GAMESTATE:0 "Treating the Sick Man"
+INIT_GAMESTATE:0 "부상병을 치료하는 중"
 #"Initialising game"
-EXECUTE_HISTORY:0 "Watching the Rhine"
+EXECUTE_HISTORY:0 "라인 강을 감시하는 중"
 #"Executing history"
-CREATING_CHKSUM:0 "Implementing direct rule from London"
+CREATING_CHKSUM:0 "런던에 대한 직접 통치를 준비하는 중"
 #CREATING_CHKSUM:0 "Apologising for late patches"
 #"Creating checksum"
-GENERATING_GRADIENT_BORDERS:0 "Betraying the revolution"
+GENERATING_GRADIENT_BORDERS:0 "혁명을 배반하는 중"
 #"Generating Gradient Borders"
 
 ### Autonomy ###
-autonomy_colony:1 "Autonomous Puppet"
-autonomy_dominion:1 "Autonomous Dependency"
+autonomy_colony:1 "자치 괴뢰국"
+autonomy_dominion:1 "자치 종속국"
 
 ### Land Units ###
-garrison:0 "Garrison"
-militia:0 "Militia"
+garrison:0 "주둔군"
+militia:0 "민병대"
 
 ### Interface ###
-minister:1 "Ministers"
-research_production:1 "Companies"
-industrial_concern:1 "Industrial Company"
-weapons_manufacturer:0 "Weapons Manufacturer"
-tank_manufacturer:1 "Heavy Equipment Manufacturer"
-air_naval_manufacturer:0 "Air and Naval Manufacturer"
-POLITICS_NOELECTIONS:0 "Any elections by event."
-can_replace_hog:0 "Can Replace Head Of Government"
-ministers_cannot_be_replaced:0 "Ministers Cannot Be Replaced"
+minister:1 "장관"
+research_production:1 "회사"
+industrial_concern:1 "산업 회사"
+weapons_manufacturer:0 "무기 제조사"
+tank_manufacturer:1 "중장비 제조사"
+air_naval_manufacturer:0 "항공/선박 제조사"
+POLITICS_NOELECTIONS:0 "선거는 이벤트에 따라 열림."
+can_replace_hog:0 "총리 재임명 가능"
+ministers_cannot_be_replaced:0 "장관 재임명 불가"
 
 ### Factions ###
-Mittelmacht:0 "Mitteleuropa"
-Entente:0 "Entente"
-Belgrade_Pact:0 "Belgrade Pact"
-Third_International:0 "Third Internationale"
-Mongolian_Alliance:0 "Great Khanate"
-Scandinavian_Pact:0 "Scandinavian Pact"
-Mediterranean_Bloc:0 "Mediterranean Bloc"
+Mittelmacht:0 "미텔오이로파"
+Entente:0 "협상국"
+Belgrade_Pact:0 "베오그라드 조약"
+Third_International:0 "제3인터내셔널"
+Mongolian_Alliance:0 "대칸국"
+Scandinavian_Pact:0 "스칸디나비아 조약"
+Mediterranean_Bloc:0 "지중해 연합"
 
 ### Name and Description ###
-BM_HISTORY_TITLE:0 "Brief History"
-KR_SCENARIO_NAME:0 "Legacy of the Weltkrieg"
-KR_SCENARIO_DESC:0 "The year of 1936 is a turning point for the history of the world. A time of both great opportunity and great danger. Tensions between the German Empire and the Commune of France are growing, Russia and the USA are increasingly unstable and the old empires of Austria and Ottomans are dissolving. All the meanwhile Syndicalism, Totalism and Radical Socialism are spreading all around the world. Fifteen years have passed since the end of the Weltkrieg, and the old rivalries of yore have reappeared. A single spark may be all it takes to light the powder keg..."
+BM_HISTORY_TITLE:0 "역사 되짚어보기"
+KR_SCENARIO_NAME:0 "세계 대전의 유산"
+KR_SCENARIO_DESC:0 "1936년은 세계사의 전환점이 될 것입니다. 거대한 기회와 위험이 다가오는 때입니다. 독일 제국과 프랑스 코뮌 사이의 긴장이 거세지고 있습니다. 러시아와 미합중국은 내부적으로 불안정해지고 있으며 쇠락한 제국 오스트리아와 오스만은 쇠퇴하고 있습니다. 한편 노동조합주의, 전체주의 그리고 급진사회주의는 전 세계에 뿌리내리고 있습니다. 세계 대전 종전 후 15년. 옛 적국들이 고개를 들고 있습니다. 단 하나의 불씨가 이 화약고를 폭발시키고 말 것입니다..."
 
 ### Germany ###
 GER_KR_GATHERING_STORM_DESC:0 "In 1919, after five years of war, the German army finally overran the Entente defences in France. In 1921, Britain's surrender followed. The Weltkrieg has made Germany an uncontested World Power, yet things have been going downhill for her since the 1930s. A recessive world economy has dampened the nation's industrial output while other nations' manufacturing power recovers, and now nationalism grows in Germany's eastern client states, who are starting to drift away from the Reich. In 1936, Germany stands at a crossroads, and already we can see cracks in her mighty empire, as her ancestral enemies are regaining their former strength..."
@@ -146,61 +146,61 @@ expert:0 "" #(expert)
 blank:0 "" #\n
 
 ### Ministers ###
-head_of_government:0 "Head of Government"
-foreign_minister:0 "Foreign Minister"
-economy_minister:0 "Economy Minister"
-security_minister:0 "Security Minister"
-intel_minister:0 "Intel Minister"
-decisions:0 "Decisions"
-naive_optimist:0 "Naive Optimist"
-resource_industrialist:0 "Resource Industrialist"
-mass_assault:0 "School of Mass Combat"
-static_defense:0 "Static Defence Doctrine"
-backstabber:0 "Backroom Backstabber"
-happy_amateur:0 "Happy Amateur"
-corporate_suit:0 "Corporate Suit"
-smiling_oilman:0 "Smiling Oilman"
-silent_workhorse:0 "Silent Workhorse"
-old_general:0 "Old General"
-old_air_marshall:0 "Old Air Marshall"
-totalist_chairman:0 "Totalist Chairman"
-political_powerhouse:0 "Political Powerhouse"
-expansive_imperialist:0 "Stern Imperialist"
-totalist_promoter:0 "Totalist Idol"
-radical_socialist_promoter:0 "Socialist Revolutionary"
-syndicalist_promoter:0 "Syndicalist Union Leader"
-social_democrat_promoter:0 "Socialist Reformist"
-social_liberal_promoter:0 "Progressive Hero"
-market_liberal_promoter:0 "Business Advocate"
-social_conservative_promoter:0 "Staunch Traditionalist"
-authoritarian_democrat_promoter:0 "Authoritarian Constitutionalist"
-paternal_autocrat_promoter:0 "Autocratic Charmer"
-national_populist_promoter:0 "Nationalist Demagogue"
-great_compromiser:0 "Great Compromiser"
+head_of_government:0 "총리"
+foreign_minister:0 "외교부 장관"
+economy_minister:0 "경제부 장관"
+security_minister:0 "안보부 장관"
+intel_minister:0 "정보부 장관"
+decisions:0 "결단"
+naive_optimist:0 "순진한 낙관주의자"
+resource_industrialist:0 "자원 산업가"
+mass_assault:0 "집단전 훈련가"
+static_defense:0 "정적 방어 교리"
+backstabber:0 "배후의 모략가"
+happy_amateur:0 "낙관적인 초보자"
+corporate_suit:0 "대실업가"
+smiling_oilman:0 "미소짓는 원유사업가"
+silent_workhorse:0 "조용한 일꾼"
+old_general:0 "늙은 장군"
+old_air_marshall:0 "늙은 공군 원수"
+totalist_chairman:0 "전체주의자 의장"
+political_powerhouse:0 "정치적 수완가"
+expansive_imperialist:0 "배를 탄 제국주의자"
+totalist_promoter:0 "전체주의의 우상"
+radical_socialist_promoter:0 "사회주의 혁명가"
+syndicalist_promoter:0 "노동조합주의 연방 지도자"
+social_democrat_promoter:0 "사회주의 개혁가"
+social_liberal_promoter:0 "급진주의 영웅"
+market_liberal_promoter:0 "사업가의 옹호자"
+social_conservative_promoter:0 "확고한 전통주의자"
+authoritarian_democrat_promoter:0 "권위적인 입헌주의자"
+paternal_autocrat_promoter:0 "매력적인 독재자"
+national_populist_promoter:0 "국가주의 선동가"
+great_compromiser:0 "대타협가"
 
 ### Ideologies ###
-totalist:0 "Totalists"
-syndicalist:0 "Syndicalists"
-radical_socialist:0 "Radical Socialists"
-social_democrat:0 "Social Democrats"
-market_liberal:0 "Market Liberals"
-social_conservative:0 "Social Conservatives"
-authoritarian_democrat:0 "Authoritarian Dem."
-paternal_autocrat:0 "Paternal Autocrats"
-national_populist:0 "National Populists"
-social_liberal:0 "Social Liberals"
+totalist:0 "전체주의자"
+syndicalist:0 "노동조합주의자"
+radical_socialist:0 "곱진사회주의자"
+social_democrat:0 "사회민주주의자"
+market_liberal:0 "시장자유주의자"
+social_conservative:0 "사회보수주의자"
+authoritarian_democrat:0 "권위민주주의자"
+paternal_autocrat:0 "세습전제주의자"
+national_populist:0 "국가대중주의자"
+social_liberal:0 "사회자유주의자"
 
 ### Drift ###
-totalist_drift:0 "Daily Totalist support"
-syndicalist_drift:0 "Daily Syndicalist support"
-radical_socialist_drift:0 "Daily Radical Socialist support"
-social_democrat_drift:0 "Daily Social Democrat support"
-market_liberal_drift:0 "Daily Market Liberal support"
-social_conservative_drift:0 "Daily Social Conservative support"
-authoritarian_democrat_drift:0 "Daily Authoritarian Democrat support"
-paternal_autocrat_drift:0 "Daily Paternal Autocrat support"
-national_populist_drift:0 "Daily National Populist support"
-social_liberal_drift:0 "Daily Social Liberal support"
+totalist_drift:0 "매일 전체주의자 지원"
+syndicalist_drift:0 "매일 노동조합주의자 지원"
+radical_socialist_drift:0 "매일 곱진사회주의자 지원"
+social_democrat_drift:0 "매일 사회민주주의자 지원"
+market_liberal_drift:0 "매일 시장자유주의자 지원"
+social_conservative_drift:0 "매일 사회보수주의자 지원"
+authoritarian_democrat_drift:0 "매일 권위민주주의자 지원"
+paternal_autocrat_drift:0 "매일 세습전제주의자 지원"
+national_populist_drift:0 "매일 국가대중주의자 지원"
+social_liberal_drift:0 "매일 사회자유주의자 지원"
 
 ### Banned ###
 totalist_banned:0 "Banned Totalists"
