--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -403,36 +403,36 @@ AZB_national_populist:0 "아제르바이잔 국가주의정부"
 AZB_national_populist_ADJ:0 "아제르바이잔인"
 AZB_national_populist_DEF:0 "아제르바이잔 국가주의정부"
 
-BAS_totalist:0 "Euskadi"
-BAS_totalist_ADJ:0 "Basque"
-BAS_totalist_DEF:0 "Euskadi"
-BAS_syndicalist:0 "Euskadi"
-BAS_syndicalist_ADJ:0 "Basque"
-BAS_syndicalist_DEF:0 "Euskadi"
-BAS_radical_socialist:0 "Euskadi"
-BAS_radical_socialist_ADJ:0 "Basque"
-BAS_radical_socialist_DEF:0 "Euskadi"
-BAS_social_democrat:0 "Euskadi"
-BAS_social_democrat_ADJ:0 "Basque"
-BAS_social_democrat_DEF:0 "Euskadi"
-BAS_social_liberal:0 "Euskadi"
-BAS_social_liberal_ADJ:0 "Basque"
-BAS_social_liberal_DEF:0 "Euskadi"
-BAS_market_liberal:0 "Euskadi"
-BAS_market_liberal_ADJ:0 "Basque"
-BAS_market_liberal_DEF:0 "Euskadi"
-BAS_social_conservative:0 "Euskadi"
-BAS_social_conservative_ADJ:0 "Basque"
-BAS_social_conservative_DEF:0 "Euskadi"
-BAS_authoritarian_democrat:0 "Euskadi"
-BAS_authoritarian_democrat_ADJ:0 "Basque"
-BAS_authoritarian_democrat_DEF:0 "Euskadi"
-BAS_paternal_autocrat:0 "Euskadi"
-BAS_paternal_autocrat_ADJ:0 "Basque"
-BAS_paternal_autocrat_DEF:0 "Euskadi"
-BAS_national_populist:0 "Euskadi"
-BAS_national_populist_ADJ:0 "Basque"
-BAS_national_populist_DEF:0 "Euskadi"
+BAS_totalist:0 "바스크"
+BAS_totalist_ADJ:0 "바스크인"
+BAS_totalist_DEF:0 "바스크"
+BAS_syndicalist:0 "바스크"
+BAS_syndicalist_ADJ:0 "바스크인"
+BAS_syndicalist_DEF:0 "바스크"
+BAS_radical_socialist:0 "바스크"
+BAS_radical_socialist_ADJ:0 "바스크인"
+BAS_radical_socialist_DEF:0 "바스크"
+BAS_social_democrat:0 "바스크"
+BAS_social_democrat_ADJ:0 "바스크인"
+BAS_social_democrat_DEF:0 "바스크"
+BAS_social_liberal:0 "바스크"
+BAS_social_liberal_ADJ:0 "바스크인"
+BAS_social_liberal_DEF:0 "바스크"
+BAS_market_liberal:0 "바스크"
+BAS_market_liberal_ADJ:0 "바스크인"
+BAS_market_liberal_DEF:0 "바스크"
+BAS_social_conservative:0 "바스크"
+BAS_social_conservative_ADJ:0 "바스크인"
+BAS_social_conservative_DEF:0 "바스크"
+BAS_authoritarian_democrat:0 "바스크"
+BAS_authoritarian_democrat_ADJ:0 "바스크인"
+BAS_authoritarian_democrat_DEF:0 "바스크"
+BAS_paternal_autocrat:0 "바스크"
+BAS_paternal_autocrat_ADJ:0 "바스크인"
+BAS_paternal_autocrat_DEF:0 "바스크"
+BAS_national_populist:0 "바스크"
+BAS_national_populist_ADJ:0 "바스크인"
+BAS_national_populist_DEF:0 "바스크"
 
 BAT_totalist:0 "발틱 연방"
 BAT_totalist_ADJ:0 "발틱"
@@ -496,36 +496,36 @@ BAV_national_populist:0 "남독일 연방국"
 BAV_national_populist_ADJ:0 "South German"
 BAV_national_populist_DEF:0 "남독일 연방국"
 
-BEL_totalist:0 "Belgium"
+BEL_totalist:0 "벨기에"
 BEL_totalist_ADJ:0 "Belgian"
-BEL_totalist_DEF:0 "Belgium"
-BEL_syndicalist:0 "Syndicalist Republic of Belgium"
+BEL_totalist_DEF:0 "벨기에"
+BEL_syndicalist:0 "벨기에 생디칼리즘 공화국"
 BEL_syndicalist_ADJ:0 "Belgian"
-BEL_syndicalist_DEF:0 "The Syndicalist Republic of Belgium"
-BEL_radical_socialist:0 "Belgium"
+BEL_syndicalist_DEF:0 "벨기에 생디칼리즘 공화국"
+BEL_radical_socialist:0 "벨기에"
 BEL_radical_socialist_ADJ:0 "Belgian"
-BEL_radical_socialist_DEF:0 "Belgium"
-BEL_social_democrat:0 "Belgium"
+BEL_radical_socialist_DEF:0 "벨기에"
+BEL_social_democrat:0 "벨기에"
 BEL_social_democrat_ADJ:0 "Belgian"
-BEL_social_democrat_DEF:0 "Belgium"
-BEL_social_liberal:0 "Flanders-Wallonia"
+BEL_social_democrat_DEF:0 "벨기에"
+BEL_social_liberal:0 "플랑도르-왈로니아"
 BEL_social_liberal_ADJ:0 "Belgian"
-BEL_social_liberal_DEF:0 "Flanders-Wallonia"
-BEL_market_liberal:0 "Flanders-Wallonia"
+BEL_social_liberal_DEF:0 "플랑도르-왈로니아"
+BEL_market_liberal:0 "플랑도르-왈로니아"
 BEL_market_liberal_ADJ:0 "Belgian"
-BEL_market_liberal_DEF:0 "Flanders-Wallonia"
-BEL_social_conservative:0 "Belgium"
+BEL_market_liberal_DEF:0 "플랑도르-왈로니아"
+BEL_social_conservative:0 "벨기에"
 BEL_social_conservative_ADJ:0 "Belgian"
-BEL_social_conservative_DEF:0 "Belgium"
-BEL_authoritarian_democrat:0 "Flanders-Wallonia"
+BEL_social_conservative_DEF:0 "벨기에"
+BEL_authoritarian_democrat:0 "플랑도르-왈로니아"
 BEL_authoritarian_democrat_ADJ:0 "Flemish-Wallonian"
-BEL_authoritarian_democrat_DEF:0 "Flanders-Wallonia"
-BEL_paternal_autocrat:0 "Flanders-Wallonia"
+BEL_authoritarian_democrat_DEF:0 "플랑도르-왈로니아"
+BEL_paternal_autocrat:0 "플랑도르-왈로니아"
 BEL_paternal_autocrat_ADJ:0 "Flemish-Wallonian"
-BEL_paternal_autocrat_DEF:0 "Flanders-Wallonia"
-BEL_national_populist:0 "Belgica"
+BEL_paternal_autocrat_DEF:0 "플랑도르-왈로니아"
+BEL_national_populist:0 "벨기카"
 BEL_national_populist_ADJ:0 "Belgian"
-BEL_national_populist_DEF:0 "Belgica"
+BEL_national_populist_DEF:0 "벨기카"
 
 BFA_totalist:0 "Burkina Faso"
 BFA_totalist_ADJ:0 "Burkinabe"
@@ -651,36 +651,36 @@ BOL_national_populist:0 "Falangist Bolivia"
 BOL_national_populist_ADJ:0 "Bolivian"
 BOL_national_populist_DEF:0 "Falangist Bolivia"
 
-BOM_totalist:0 "Bohemian Socialist Republic"
-BOM_totalist_ADJ:0 "Bohemian"
-BOM_totalist_DEF:0 "The Bohemian Socialist Republic"
-BOM_syndicalist:0 "Bohemian Socialist Republic"
-BOM_syndicalist_ADJ:0 "Bohemian"
-BOM_syndicalist_DEF:0 "The Bohemian Socialist Republic"
-BOM_radical_socialist:0 "Bohemian Socialist Republic"
-BOM_radical_socialist_ADJ:0 "Bohemian"
-BOM_radical_socialist_DEF:0 "Bohemian Socialist Republic"
-BOM_social_democrat:0 "Bohemian Republic"
-BOM_social_democrat_ADJ:0 "Bohemian"
-BOM_social_democrat_DEF:0 "The Bohemian Republic"
-BOM_social_liberal:0 "Bohemia"
-BOM_social_liberal_ADJ:0 "Bohemian"
-BOM_social_liberal_DEF:0 "Bohemia"
-BOM_market_liberal:0 "Bohemia"
-BOM_market_liberal_ADJ:0 "Bohemian"
-BOM_market_liberal_DEF:0 "Bohemia"
-BOM_social_conservative:0 "Bohemia"
-BOM_social_conservative_ADJ:0 "Bohemian"
-BOM_social_conservative_DEF:0 "Bohemia"
-BOM_authoritarian_democrat:0 "Bohemia"
-BOM_authoritarian_democrat_ADJ:0 "Bohemian"
-BOM_authoritarian_democrat_DEF:0 "Bohemia"
-BOM_paternal_autocrat:0 "Bohemia"
-BOM_paternal_autocrat_ADJ:0 "Bohemian"
-BOM_paternal_autocrat_DEF:0 "Bohemia"
-BOM_national_populist:0 "Bohemia"
-BOM_national_populist_ADJ:0 "Bohemian"
-BOM_national_populist_DEF:0 "Bohemia"
+BOM_totalist:0 "보헤미아 사회주의 공화국"
+BOM_totalist_ADJ:0 "보헤미아인"
+BOM_totalist_DEF:0 "보헤미아 사회주의 공화국"
+BOM_syndicalist:0 "보헤미아 사회주의 공화국"
+BOM_syndicalist_ADJ:0 "보헤미아인"
+BOM_syndicalist_DEF:0 "보헤미아 사회주의 공화국"
+BOM_radical_socialist:0 "보헤미아 사회주의 공화국"
+BOM_radical_socialist_ADJ:0 "보헤미아인"
+BOM_radical_socialist_DEF:0 "보헤미아 사회주의 공화국"
+BOM_social_democrat:0 "보헤미아 공화국"
+BOM_social_democrat_ADJ:0 "보헤미아인"
+BOM_social_democrat_DEF:0 "The 보헤미아 공화국"
+BOM_social_liberal:0 "보헤미아"
+BOM_social_liberal_ADJ:0 "보헤미아인"
+BOM_social_liberal_DEF:0 "보헤미아"
+BOM_market_liberal:0 "보헤미아"
+BOM_market_liberal_ADJ:0 "보헤미아인"
+BOM_market_liberal_DEF:0 "보헤미아"
+BOM_social_conservative:0 "보헤미아"
+BOM_social_conservative_ADJ:0 "보헤미아인"
+BOM_social_conservative_DEF:0 "보헤미아"
+BOM_authoritarian_democrat:0 "보헤미아"
+BOM_authoritarian_democrat_ADJ:0 "보헤미아인"
+BOM_authoritarian_democrat_DEF:0 "보헤미아"
+BOM_paternal_autocrat:0 "보헤미아"
+BOM_paternal_autocrat_ADJ:0 "보헤미아인"
+BOM_paternal_autocrat_DEF:0 "보헤미아"
+BOM_national_populist:0 "보헤미아"
+BOM_national_populist_ADJ:0 "보헤미아인"
+BOM_national_populist_DEF:0 "보헤미아"
 
 BOS_totalist:0 "Bosnian Socialist Republic"
 BOS_totalist_ADJ:0 "Socialist-Bosnian"
@@ -899,15 +899,15 @@ BUR_national_populist:0 "Kingdom of Burma"
 BUR_national_populist_ADJ:0 "Burmese"
 BUR_national_populist_DEF:0 "The Kingdom of Burma"
 
-CAF_totalist:0 "Caribbean Union"
+CAF_totalist:0 "카리브해 연방"
 CAF_totalist_ADJ:0 "Caribbean"
-CAF_totalist_DEF:0 "The Caribbean Union"
-CAF_syndicalist:0 "Caribbean Union"
+CAF_totalist_DEF:0 "카리브해 연방"
+CAF_syndicalist:0 "카리브해 연방"
 CAF_syndicalist_ADJ:0 "Caribbean"
-CAF_syndicalist_DEF:0 "The Caribbean Union"
-CAF_radical_socialist:0 "Caribbean Union"
+CAF_syndicalist_DEF:0 "카리브해 연방"
+CAF_radical_socialist:0 "카리브해 연방"
 CAF_radical_socialist_ADJ:0 "Caribbean"
-CAF_radical_socialist_DEF:0 "The Caribbean Union"
+CAF_radical_socialist_DEF:0 "카리브해 연방"
 CAF_social_democrat:0 "Caribbean Federation"
 CAF_social_democrat_ADJ:0 "Caribbean"
 CAF_social_democrat_DEF:0 "The Caribbean Federation"
